fix: #49 Stick to Java 8 style and binary compatibility Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>